deleted unnecessary impressum and added copyright

--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
 
     <footer>
       <a href="">Impressum</a>
-      <a href="">Impressum</a>
-      <a href="">Impressum</a>
+      <p>Copyright</p>
     </footer>
   </body>
 </html>
